# django_app

./: .flake8  .pre-commit-config.yaml  README.md  manage.py  mypy.ini  pyproject.toml
apps/poll/: urls.py
django_apps/poll/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
django_apps/poll/migrations/: 0001_initial.py
django_apps/poll/templates/poll/: detail.html  index.html  results.html
django_walk/: asgi.py  settings.py  urls.py  wsgi.py
templates/admin/: base_site.html
tests/: test_django_walk.py
